--- a/C/code up-C/code up-C/code up-C.vcxproj.filters
+++ b/C/code up-C/code up-C/code up-C.vcxproj.filters
@@ -14,4 +14,63 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="1002.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1003.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1004.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1001.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1005.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1006.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1007.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1008.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1010.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1011.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1012.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1013.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1014.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1015.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1017.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1018.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1019.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1020.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1021.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
