--- a/C/code up-C/code up-C/code up-C.vcxproj.filters
+++ b/C/code up-C/code up-C/code up-C.vcxproj.filters
@@ -117,5 +117,17 @@
     <ClCompile Include="1036.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1037.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1038.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1039.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1040.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
