--- a/C/code up-C/code up-C/code up-C.vcxproj
+++ b/C/code up-C/code up-C/code up-C.vcxproj
@@ -270,6 +270,15 @@
     <ClCompile Include="1052.c" />
     <ClCompile Include="1053.c" />
     <ClCompile Include="1054.c" />
+    <ClCompile Include="1055.c" />
+    <ClCompile Include="1056.c" />
+    <ClCompile Include="1057.c" />
+    <ClCompile Include="1058.c" />
+    <ClCompile Include="1059.c" />
+    <ClCompile Include="1060.c" />
+    <ClCompile Include="1061.c" />
+    <ClCompile Include="1062.c" />
+    <ClCompile Include="1063.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
