--- a/C/code up-C/code up-C/code up-C.vcxproj.filters
+++ b/C/code up-C/code up-C/code up-C.vcxproj.filters
@@ -198,5 +198,26 @@
     <ClCompile Include="1063.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1064.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1065.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1066.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1067.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1068.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1069.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1070.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
