--- a/C/code up-C/code up-C/code up-C.vcxproj.filters
+++ b/C/code up-C/code up-C/code up-C.vcxproj.filters
@@ -219,5 +219,32 @@
     <ClCompile Include="1070.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1071.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1072.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1073.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1074.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1075.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1076.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1077.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1078.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1079.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
