--- a/C/code up-C/code up-C/code up-C.vcxproj.filters
+++ b/C/code up-C/code up-C/code up-C.vcxproj.filters
@@ -246,5 +246,8 @@
     <ClCompile Include="1079.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1080.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
