--- a/C/code up-C/code up-C/code up-C.vcxproj.filters
+++ b/C/code up-C/code up-C/code up-C.vcxproj.filters
@@ -288,5 +288,14 @@
     <ClCompile Include="1093.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1094.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1095.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1096.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
