--- a/C/macrotest/macrotest/macrotest.vcxproj
+++ b/C/macrotest/macrotest/macrotest.vcxproj
@@ -140,8 +140,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="clickmecro.cpp" />
     <ClCompile Include="imgprocess.cpp" />
     <ClCompile Include="macrotest.cpp" />
+    <ClCompile Include="mousemacro(google).cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
