--- a/C/macrotest/macrotest/macrotest.vcxproj.filters
+++ b/C/macrotest/macrotest/macrotest.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="imgprocess.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="clickmecro.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="mousemacro(google).cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
